# just-calculate-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: deferred.md  math-catalog.md
src/: main.rs  server.rs
src/tools/: arithmetic.rs  calculus.rs  combinatorics.rs  constants.rs  engineering.rs  finance.rs  geometry.rs  linear_algebra.rs  logarithm.rs  mod.rs  number_theory.rs  powers.rs  probability.rs  programmer.rs  registry.rs  shared.rs  special_functions.rs  statistics.rs  trigonometry.rs  unit_convert.rs
