[package]
name = "just-calculate-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "just-calculate-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
libm = "0.2"
nalgebra = "0.33"
statrs = "0.17"

[dev-dependencies]
# `client` feature is test-only: it powers the in-memory client/server
# integration test for the toggle/act gating in src/server.rs.
rmcp = { version = "1.7", features = ["server", "client"] }
