[package]
name = "just-calculate-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Pavan Singh Gill"]
license = "Apache-2.0"
description = "A Rust MCP server exposing many math tools, with a toggle/act gating layer that keeps the client tool list tiny while staying fully discoverable."
repository = "https://github.com/pavansgill/just-calculate-mcp"
readme = "README.md"
keywords = ["mcp", "calculator", "math", "tool-gating", "rmcp"]
categories = ["mathematics", "command-line-utilities"]

[[bin]]
name = "just-calculate-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
libm = "0.2"
nalgebra = "0.35"
statrs = "0.18"

[dev-dependencies]
# `client` feature is test-only: it powers the in-memory client/server
# integration test for the toggle/act gating in src/server.rs.
rmcp = { version = "2.0", features = ["server", "client"] }
